@@ -4,7 +4,6 @@
 
 package il.technion.cs236369.webserver;
 
-
 import il.technion.cs236369.webserver.simplefilter.SimpleFilter;
 import il.technion.cs236369.webserver.simplefilter.SimpleFilterWrapper;
 
@@ -30,22 +29,15 @@ import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
-
-
-
 /**
  * @author Shmulik
  *
  */
-public class XMLParser
-{
-	public XMLParser()
-		throws ParserConfigurationException,
-		SAXException,
-		IOException
-	{
-		final DocumentBuilderFactory docFactory =
-			DocumentBuilderFactory.newInstance();
+public class XMLParser {
+	public XMLParser() throws ParserConfigurationException, SAXException,
+			IOException {
+		final DocumentBuilderFactory docFactory = DocumentBuilderFactory
+				.newInstance();
 		docFactory.setNamespaceAware(true);
 		final DocumentBuilder builder = docFactory.newDocumentBuilder();
 		doc = builder.parse("config.xml");
@@ -54,9 +46,7 @@ public class XMLParser
 		xpath = xpathFactory.newXPath();
 	}
 
-
-	public List<SimpleFilterWrapper> getFilterWrappers()
-	{
+	public List<SimpleFilterWrapper> getFilterWrappers() {
 		final List<SimpleFilterWrapper> $ = new ArrayList<>();
 
 		NodeList nl;
@@ -66,27 +56,20 @@ public class XMLParser
 		Set<String> urls = null;
 		SimpleFilterWrapper filterWrapper;
 
-		try
-		{
-			nl =
-				(NodeList) xpath
-					.compile("//simple-filters/simple-filter")
+		try {
+			nl = (NodeList) xpath.compile("//simple-filters/simple-filter")
 					.evaluate(doc, XPathConstants.NODESET);
 
-			for (int i = 0; i < nl.getLength(); i++)
-			{
+			for (int i = 0; i < nl.getLength(); i++) {
 				className = nl.item(i).getAttributes().getNamedItem("class");
 
-				filter =
-					(SimpleFilter) Class
+				filter = (SimpleFilter) Class
 						.forName(className.getNodeValue().toString())
-						.getConstructor()
-						.newInstance();
+						.getConstructor().newInstance();
 
 				childNode = nl.item(i).getChildNodes();
 				urls = new HashSet<>();
-				for (int j = 0; j < childNode.getLength(); j++)
-				{
+				for (int j = 0; j < childNode.getLength(); j++) {
 					final String url = childNode.item(j).getTextContent();
 					urls.add(url);
 				}
@@ -94,55 +77,63 @@ public class XMLParser
 				$.add(filterWrapper);
 			}
 
-		} catch (final
-			XPathExpressionException
-			| InstantiationException
-			| IllegalAccessException
-			| IllegalArgumentException
-			| InvocationTargetException
-			| NoSuchMethodException
-			| SecurityException
-			| ClassNotFoundException e)
-		{
-			// TODO Auto-generated catch block
+		} catch (final XPathExpressionException | InstantiationException
+				| IllegalAccessException | IllegalArgumentException
+				| InvocationTargetException | NoSuchMethodException
+				| SecurityException | ClassNotFoundException e) {
+			System.err
+					.println("XML parser encountered a problem building filters");
 			e.printStackTrace();
 		}
 
 		return $;
 	}
 
-
 	@SuppressWarnings("nls")
-	Map<String, String> getMimeTypes()
-	{
+	Map<String, String> getMimeTypes() {
 		final Map<String, String> $ = new HashMap<>();
 
 		NodeList nl;
-		try
-		{
-			nl =
-				(NodeList) xpath.compile("//mime/mime-mapping").evaluate(
-					doc,
+		try {
+			nl = (NodeList) xpath.compile("//mime/mime-mapping").evaluate(doc,
 					XPathConstants.NODESET);
 
-			for (int i = 0; i < nl.getLength(); ++i)
-			{
-				final String extension =
-					xpath.compile("./extension").evaluate(nl.item(i));
-				final String mime_type =
-					xpath.compile("./mime-type").evaluate(nl.item(i));
+			for (int i = 0; i < nl.getLength(); ++i) {
+				final String extension = xpath.compile("./extension").evaluate(
+						nl.item(i));
+				final String mime_type = xpath.compile("./mime-type").evaluate(
+						nl.item(i));
 				$.put(extension, mime_type);
 			}
 
-		} catch (final XPathExpressionException e)
-		{
-			// TODO Auto-generated catch block
+		} catch (final XPathExpressionException e) {
+			System.err
+					.println("XML parser encountered a problem building mime types map");
 			e.printStackTrace();
 		}
 		return $;
 	}
 
+	String getWelcomeFile() {
+		String $ = "";
 
+		NodeList nl;
+		try {
+			nl = (NodeList) xpath.compile("//welcome-file").evaluate(doc,
+					XPathConstants.NODESET);
+
+			for (int i = 0; i < nl.getLength(); ++i) {
+				$ = nl.item(i).getTextContent();
+			}
+
+		} catch (final XPathExpressionException e) {
+			System.err
+					.println("XML parser encountered a problem building mime types map");
+			e.printStackTrace();
+		}
+
+		return $;
+	}
 
 	XPath xpath;
 
